added 3rd and 4th section, need to style form box

--- a/index.html
+++ b/index.html
@@ -13,39 +13,156 @@
     <title>Online Exam for Carl Ocab | by Janmar Roque</title>
   </head>
   <body>
-    <header>
-      <div class="nav">
+    <nav class="nav">
+      <div class="nav-container container">
         <div class="logo">
           <img class="logo-img" src="./images/logo.png" alt="logo" />
         </div>
 
-        <nav class="container">
-          <div class="links">
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
-              <li><a href="">Services</a></li>
-              <li>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-youtube"></i>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="#services">Services</a></li>
+          <li>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+          </li>
+        </ul>
       </div>
+    </nav>
 
-      <div class="hero">
-        <div class="hero-text">
-          <p class="hero-header">Lorem ipsum dolor sit amet consectetur.</p>
-          <p>
-            Vestibulum tortor metus, elifend vel dui vel, pharetra elementum
-            dui.
+    <div class="hero">
+      <div class="hero-text">
+        <p class="hero-header">Lorem ipsum dolor sit amet consectetur.</p>
+        <p class="hero-caption">
+          Vestibulum tortor metus, eleifend vel dui vel, pharetra elementum dui.
+        </p>
+      </div>
+      <button>CONTACT</button>
+    </div>
+
+    <main>
+      <section id="about">
+        <div class="slice container">
+          <p class="slice-header">This is a slicing test.</p>
+          <p class="slice-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui error
+            nulla praesentium repellat? Natus reprehenderit architecto
+            blanditiis quo non illum consectetur cum, ratione odio, sint
+            dignissimos eligendi nihil officiis fuga hic incidunt, veniam
+            numquam. Nesciunt aliquid eum assumenda iure nostrum.
+          </p>
+
+          <p class="slice-text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Perspiciatis eius fugiat ad qui reiciendis quod totam! Sapiente quis
+            eveniet officia, veniam aspernatur omnis consequuntur, non alias
+            aperiam a, animi itaque!
           </p>
         </div>
-        <button>CONTACT</button>
-      </div>
-    </header>
+      </section>
+
+      <section id="services">
+        <div class="two-column container">
+          <div class="text-left">
+            <p class="service-header">This is a 2 column layout.</p>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              aut commodi odio iste assumenda et. Incidunt illo accusantium
+              architecto id accusamus animi iure laborum? Ipsum.
+            </p>
+            <br />
+            <p class="service-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptate molestiae placeat voluptatem, ipsam exercitationem illo?
+              Cum, voluptatum eveniet!
+            </p>
+          </div>
+
+          <div class="text-right">
+            <p class="service-header">Aint it?</p>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Explicabo neque autem eveniet labore repellendus commodi placeat,
+              aperiam reprehenderit rem minima alias quibusdam saepe sit iure!
+            </p>
+
+            <br />
+
+            <p class="service-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis
+              necessitatibus similique natus, amet neque alias reiciendis.
+              Nihil, earum.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="contact">
+        <div class="container">
+          <div class="contact-wrapper">
+            <div class="contact-message">
+              <p class="contact-header">This is wrapped</p>
+
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+                non ullam expedita inventore voluptate totam, id cum eligendi
+                asperiores laboriosam. Eligendi nam fugit nulla! Ipsum excepturi
+                autem, consequuntur facere alias dolores? Iusto alias explicabo
+                a.
+              </p>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                est obcaecati aspernatur reiciendis, officiis enim mollitia
+                facere, velit quidem ex dignissimos sunt quo vitae quia
+                molestiae quasi doloremque cupiditate praesentium vel
+                accusantium. Harum, magnam eligendi!
+              </p>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+                perferendis eligendi accusamus hic, deleniti obcaecati! Rem est
+                obcaecati at maxime laboriosam, veritatis necessitatibus magnam
+                aliquid labore, debitis iusto.
+              </p>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                perspiciatis sint eos? Optio quos impedit facere! Eius aliquam
+                aspernatur ad sed doloribus qui omnis ullam quidem, optio
+                debitis non sint, veniam tempora eligendi totam. Ratione
+                asperiores ducimus officiis.
+              </p>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus,
+                voluptatibus. Esse, nesciunt. Qui aperiam quibusdam eveniet
+                voluptates nihil minima nemo dicta nobis modi mollitia ullam
+                blanditiis dolorum explicabo non ipsa, maxime iure fugit ratione
+                iusto obcaecati. Est, amet?
+              </p>
+            </div>
+            <div class="contact-form">
+              <h4 class="form-header">Get in touch.</h4>
+              <form action="">
+                <label for="name">Your name</label>
+                <input type="text" id="name" class="form-input" />
+                <label for="email">Your email</label>
+                <input type="email" id="email" class="form-input" />
+                <label for="phone">Your phone</label>
+                <div class="phone-number">
+                  <input type="number" placeholder="Code" class="code" />
+                  <input type="number" placeholder="Phone" class="phone" />
+                </div>
+                <button class="contact-submit">SUBMIT</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
