added burger menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       crossorigin="anonymous"
     ></script>
 
+    <script src="./js/main.js" defer></script>
+
     <title>Online Exam for Carl Ocab | by Janmar Roque</title>
   </head>
   <body>
@@ -31,6 +33,7 @@
             <i class="fab fa-youtube"></i>
           </li>
         </ul>
+
         <div class="burger">
           <div class="line1"></div>
           <div class="line2"></div>
