flex column on smaller screens

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script src="./js/main.js" defer></script>
 
-    <title>Online Exam for Carl Ocab | by Janmar Roque</title>
+    <title>Online Exam for Carl Ocab | by Janmar Roque, Jr.</title>
   </head>
   <body>
     <nav class="nav">
